--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=spring-rest-web-project
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/spring_boot_rest
+spring.datasource.username=postgres
+spring.datasource.password=452389
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+
