implemented JwtService, and UserDetails classes and other changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 
+jwt.secret=ld5g24359gv243hkjhfds9g643kjghfdsg984673g43ghdfgkfdhkg
+jwt.time.expiration=3600000
+
